:sparkles: feat: season, genres related animation
애니메이션 생성시 시즌, 장르 연계
