# dist/swagger.json
@@ -6,7 +6,7 @@
       "description": "Local Server"
     },
     {
-      "url": "http://localhost:8000/api/v20230821",
+      "url": "http://localhost:3030/api/v20230821",
       "description": "Local Server no docker"
     }
   ],
@@ -47,7 +47,8 @@
             "x-nestia-encrypted": false
           }
         },
-        "description": "@tag admin/animation",
+        "summary": "@tag admin/animation\n@enum season",
+        "description": "@tag admin/animation\n@enum season.quarter: [1, 2, 3, 4]",
         "x-nestia-namespace": "animation.store",
         "x-nestia-jsDocTags": [
           {
@@ -55,6 +56,15 @@
             "text": [
               {
                 "text": "admin/animation",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "enum",
+            "text": [
+              {
+                "text": ": [1, 2, 3, 4]",
                 "kind": "text"
               }
             ]
@@ -93,7 +103,7 @@
             "x-nestia-encrypted": false
           }
         },
-        "description": "@tag animation",
+        "description": "@tag animation\n@enum status: ['FINISHED', 'ONGOING', 'UPCOMING', 'UNKNOWN']",
         "x-nestia-namespace": "animation.getList",
         "x-nestia-jsDocTags": [
           {
@@ -101,6 +111,15 @@
             "text": [
               {
                 "text": "animation",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "enum",
+            "text": [
+              {
+                "text": ": ['FINISHED', 'ONGOING', 'UPCOMING', 'UNKNOWN']",
                 "kind": "text"
               }
             ]
@@ -1313,6 +1332,49 @@
               "type": "string",
               "default": "가이낙스"
             }
+          },
+          "seasons": {
+            "description": "@default 가이낙스",
+            "x-typia-jsDocTags": [
+              {
+                "name": "default",
+                "text": [
+                  {
+                    "text": "가이낙스",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/__type"
+            }
+          },
+          "genres": {
+            "description": "@default FANTASY\n@enum GenreType",
+            "x-typia-jsDocTags": [
+              {
+                "name": "default",
+                "text": [
+                  {
+                    "text": "FANTASY",
+                    "kind": "text"
+                  }
+                ]
+              },
+              {
+                "name": "enum"
+              }
+            ],
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GenreType"
+            }
           }
         },
         "nullable": false,
@@ -1326,7 +1388,9 @@
           "status",
           "isReleased",
           "imageUrl",
-          "studioNames"
+          "studioNames",
+          "seasons",
+          "genres"
         ],
         "x-typia-jsDocTags": []
       },
@@ -1357,6 +1421,43 @@
           "UNKNOWN"
         ]
       },
+      "__type": {
+        "type": "object",
+        "properties": {
+          "year": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "number"
+          },
+          "quarter": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "number"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "year",
+          "quarter"
+        ],
+        "x-typia-jsDocTags": []
+      },
+      "GenreType": {
+        "type": "string",
+        "enum": [
+          "FANTASY",
+          "SF",
+          "ROMANCE",
+          "ACTION",
+          "ADVANTURE",
+          "ANOTHER_WORLD",
+          "FAMILY",
+          "GAG",
+          "TOUCHING",
+          "CRIME",
+          "DRAMA"
+        ]
+      },
       "AnimationItemResDto": {
         "type": "object",
         "properties": {
@@ -1366,6 +1467,14 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/GetResult_lt__blt__space_id:_space_number;_space_name:_space_string;_space_createdAt:_space_Date;_space_updatedAt:_space_Date;_space__bgt__comma__space_unknown_gt__space__and__space__blt__bgt_"
+            }
+          },
+          "seasons": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GetResult_lt__blt__space_id:_space_number;_space_animationId:_space_number;_space_year:_space_number;_space_quarter:_space_number;_space_createdAt:_space_Date;_space__bgt__comma__space_unknown_gt__space__and__space__blt__bgt_"
             }
           },
           "name": {
@@ -1551,7 +1660,8 @@
         },
         "nullable": false,
         "required": [
-          "studios"
+          "studios",
+          "seasons"
         ],
         "x-typia-jsDocTags": []
       },
@@ -1587,6 +1697,46 @@
           "name",
           "createdAt",
           "updatedAt"
+        ],
+        "x-typia-jsDocTags": []
+      },
+      "GetResult_lt__blt__space_id:_space_number;_space_animationId:_space_number;_space_year:_space_number;_space_quarter:_space_number;_space_createdAt:_space_Date;_space__bgt__comma__space_unknown_gt__space__and__space__blt__bgt_": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "number"
+          },
+          "createdAt": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          "animationId": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "number"
+          },
+          "year": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "number"
+          },
+          "quarter": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "number"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "id",
+          "createdAt",
+          "animationId",
+          "year",
+          "quarter"
         ],
         "x-typia-jsDocTags": []
       },
@@ -1967,10 +2117,31 @@
             "x-typia-optional": true,
             "type": "string",
             "default": "바키"
+          },
+          "status": {
+            "description": "@enum Status\n@default ONGOING",
+            "x-typia-jsDocTags": [
+              {
+                "name": "enum"
+              },
+              {
+                "name": "default",
+                "text": [
+                  {
+                    "text": "ONGOING",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": false,
+            "x-typia-optional": true,
+            "type": "string",
+            "default": "ONGOING"
           }
         },
         "nullable": false,
-        "description": "@default 바키",
+        "description": "@enum Status\n@default ONGOING",
         "x-typia-jsDocTags": []
       },
       "UpdateNameDto": {
@@ -3069,11 +3240,11 @@
       "AttractionElement": {
         "type": "string",
         "enum": [
+          "ACTION",
           "PAINTING",
           "STORY",
           "BGM",
           "CHARACTER",
-          "ACTION",
           "IMMERSIBILITY"
         ]
       },
