# src/domain/animation/dto/animation.res.dto.ts
@@ -1,8 +1,10 @@
 import { AnimationBaseDto } from './animation.req.dto';
-import { Studio } from '@prisma/client';
+import { Genre, Season, Studio } from '@prisma/client';
 
 export interface AnimationItemResDto extends Partial<AnimationBaseDto> {
   studios: Studio[];
+  seasons: Season[];
+  genres: Genre[];
 }
 
 export interface AnimationListResDto {
